--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">   
 </head>
 <body>
-    <h1>Get demo page a salem moalige</h1>
+    <h1>Get demo page a salem moalige 2</h1>
 
     <script src="app.js"></script>
 </body>
